When the tagging was done, the problematic patch did get into. This is a backport of the fix for this problem. This commit has been into 4.2 (trunk) for several days now, so I am backporting it.

BUG: 167826

svn path=/branches/KDE/4.1/kdelibs/; revision=840377